# wait_list_simulation

./: .gitignore  esc  example_op_processing.ipynb  mri_components.py  pyproject.toml  requirements-ci.txt  requirements.txt  test.ipynb
.github/workflows/: python-app.yml
.ipynb_checkpoints/: test-checkpoint.ipynb
example_sql/: engine.txt  num_new_refs.sql  op_cancellation_rate.sql  op_clinic_slots.sql  op_current_waiting_list.sql  op_discharge_rate.sql  op_dna_rate.sql  op_fu_rate.sql  op_historic_waiting_list.sql  op_rott_params.sql  op_sample_db.db
simulation/: __init__.py  simulation_components.py
simulation/config/: min_max_wait_mapping.json
simulation/mri/: README.md  __init__.py  department.py  metrics.py
simulation/outpatient/: __init__.py  resource_match.py
simulation/patient_management/: __init__.py  forecast_arrivals.py  patient_categoriser.py  priority.py  rott.py
test/simulation/patient_management/: test_forecast_arrivals.py  test_patient_categoriser.py  test_priority.py  test_rott.py
