[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation"
version = "0.1.0"
authors = [
    { name="Chris Sampson", email="christopher.sampson@somersetft.nhs.uk" },
]
description = "Simulation framework for SFT waiting lists."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Somerset-NHS-FT-DS-Improvement/wait_list_simulation"
Issues = "https://github.com/Somerset-NHS-FT-DS-Improvement/wait_list_simulation/issues"

[tool.setuptools.packages.find]
where = ["."]